--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
             var id_token = googleUser.getAuthResponse().id_token;
             console.log(id_token);
+            window.location.href = 'calculadora.html';
         }
     </script>
 </body>
